--- a/upload/admin/assets/css/sociallogin.css
+++ b/upload/admin/assets/css/sociallogin.css
@@ -9,7 +9,7 @@
 }
 
 .oa_provider {
-  background-image: url("../img/provider_sprite_35_35.png");
+  background-image: url("../img/sprite_35_35.png");
   text-indent: -9999px;
   height: 35px;
   width: 35px;
@@ -121,159 +121,154 @@
 }
 
 
-
-.oa_provider_aol {
-  background-position: -2px -1px;
-}
-
-.oa_provider_blogger {
+.oa_social_login_provider_blogger {
   background-position: -39px -1px;
 }
 
-.oa_provider_facebook {
+.oa_social_login_provider_facebook {
   background-position: -76px -1px;
 }
 
-.oa_provider_foursquare {
+.oa_social_login_provider_foursquare {
   background-position: -113px -1px;
 }
 
-.oa_provider_google {
+.oa_social_login_provider_google {
   background-position: -150px -1px;
 }
 
-.oa_provider_linkedin {
+.oa_social_login_provider_linkedin {
   background-position: -224px -1px;
 }
 
-.oa_provider_windowslive {
+.oa_social_login_provider_windowslive {
   background-position: -261px -1px;
 }
 
-.oa_provider_livejournal {
+.oa_social_login_provider_livejournal {
   background-position: -298px -1px;
 }
 
-.oa_provider_myspace {
+.oa_social_login_provider_myspace {
   background-position: -372px -1px;
 }
 
-.oa_provider_openid {
+.oa_social_login_provider_openid {
   background-position: -409px -1px;
 }
 
-.oa_provider_twitter {
+.oa_social_login_provider_twitter {
   background-position: -520px -1px;
 }
 
-.oa_provider_vkontakte {
+.oa_social_login_provider_vkontakte {
   background-position: -631px -1px;
 }
 
-.oa_provider_wordpress {
+.oa_social_login_provider_wordpress {
   background-position: -668px -1px;
 }
 
-.oa_provider_yahoo {
+.oa_social_login_provider_yahoo {
   background-position: -705px -1px;
 }
 
-.oa_provider_paypal {
+.oa_social_login_provider_paypal {
   background-position: -742px -1px;
 }
 
-.oa_provider_stackexchange {
+.oa_social_login_provider_stackexchange {
   background-position: -779px -1px;
 }
 
-.oa_provider_steam {
+.oa_social_login_provider_steam {
   background-position: -816px -1px;
 }
 
-.oa_provider_mailru {
+.oa_social_login_provider_mailru {
   background-position: -853px -1px;
 }
 
-.oa_provider_skyrock {
+.oa_social_login_provider_skyrock {
   background-position: -890px -1px;
 }
 
-.oa_provider_github {
+.oa_social_login_provider_github {
   background-position: -927px -1px;
 }
 
-.oa_provider_disqus {
+.oa_social_login_provider_disqus {
   background-position: -964px -1px;
 }
 
-.oa_provider_youtube {
+.oa_social_login_provider_youtube {
   background-position: -1001px -1px;
 }
 
-.oa_provider_odnoklassniki {
+.oa_social_login_provider_odnoklassniki {
   background-position: -1038px -1px;
 }
 
-.oa_provider_meetup {
+.oa_social_login_provider_meetup {
     background-position: -1408px -1px;
 }
 
-.oa_provider_instagram {
+.oa_social_login_provider_instagram {
     background-position: -1186px -1px;
 }
 
-.oa_provider_line {
+.oa_social_login_provider_line {
     background-position: -1445px -1px;
 }
 
-.oa_provider_draugiem {
+.oa_social_login_provider_draugiem {
     background-position: -446px -1px;
 }
 
-.oa_provider_dribbble {
+.oa_social_login_provider_dribbble {
     background-position: -1260px -1px;
 }
 
-.oa_provider_amazon {
+.oa_social_login_provider_amazon {
     background-position: -1149px -1px;
 }
 
-.oa_provider_battlenet {
+.oa_social_login_provider_battlenet {
     background-position: -1223px -1px;
 }
 
-.oa_provider_pinterest {
+.oa_social_login_provider_pinterest {
     background-position: -1297px -1px;
 }
 
-.oa_provider_pixelpin {
+.oa_social_login_provider_pixelpin {
     background-position: -1334px -1px;
 }
 
-.oa_provider_reddit {
+.oa_social_login_provider_reddit {
     background-position: -187px -1px;
 }
 
-.oa_provider_soundcloud {
+.oa_social_login_provider_soundcloud {
     background-position: -1482px -1px;
 }
 
-.oa_provider_twitch {
+.oa_social_login_provider_twitch {
     background-position: -1112px -1px;
 }
 
-.oa_provider_vimeo {
+.oa_social_login_provider_vimeo {
     background-position: -2px -1px;
 }
 
-.oa_provider_discord {
+.oa_social_login_provider_discord {
     background-position: -1519px -1px;
 }
 
-.oa_provider_weibo {
+.oa_social_login_provider_weibo {
     background-position: -1556px -1px;
 }
 
-.oa_provider_tumblr {
+.oa_social_login_provider_tumblr {
     background-position: -1593px -1px;
 }
