Social Login 1.2.0 for Joomla 1.5+

--- a/upload/admin/assets/css/sociallogin.css
+++ b/upload/admin/assets/css/sociallogin.css
@@ -272,3 +272,7 @@
 .oa_social_login_provider_tumblr {
     background-position: -1593px -1px;
 }
+
+.oa_social_login_provider_xing {
+    background-position: -483px -1px;
+}
