--- a/upload/admin/assets/css/oneallsociallogin.css
+++ b/upload/admin/assets/css/oneallsociallogin.css
@@ -329,3 +329,7 @@
 .oa_social_login_provider_tumblr {
     background-position: -1593px -1px;
 }
+
+.oa_social_login_provider_xing {
+    background-position: -372px -1px;
+}
