--- a/upload/admin/assets/css/oneallsociallogin.css
+++ b/upload/admin/assets/css/oneallsociallogin.css
@@ -333,3 +333,11 @@
 .oa_social_login_provider_xing {
     background-position: -372px -1px;
 }
+
+.oa_social_login_provider_mixer {
+    background-position: -1667px -1px;
+}
+
+.oa_social_login_provider_google {
+    background-position: -1704px -1px;
+}
